abstractopia.css
@font-face {
  font-family: "Soleil Regular";
  src: url("font/Soleil Regular.otf")
}
@font-face {
  font-family: "Soleil Book";
  src: url("font/Soleil Book.otf")
}
@font-face {
  font-family: "Soleil SemiBold";
  src: url("font/Soleil SemiBold.otf")
}
@font-face {
  font-family: "Soleil Bold";
  src: url("font/Soleil Bold.otf")
}
@font-face {
  font-family: "Mikado Medium";
  src: url("font/Mikado Medium.ttf")
}
@font-face {
  font-family: "Mikado Regular";
  src: url("font/Mikado Regular.ttf")
}

html {
  background: #FBFBFD;
}

* {
  margin: 0;
  padding: 0;

}

/* COVER */

#header{
  background-image: url("img/curriculum/abstractopia/abstractopia-wave.png");
  background-size: cover;
  background-repeat: no-repeat;
  height: 100%;
  padding: 125px 0px;
  position: relative;
  top: 0px;
}

#alon-planet {
  max-width: 380px;
  display: block;
  margin: 0 auto;
  margin-bottom: 30px;
}

h1 {
  font-family: "Mikado Medium";
  font-size: 65px;
  color: #6D37FF;
  margin-top: -40px;
  background-color: none;
  text-align: center;
}

h2 {
  font-family: "Mikado Regular";
  font-size: 20px;
  width: 50%;
  margin: 0 auto;
  text-align: center;
}

h3 {
  font-family: "Soleil Book";
  font-size: 25px;
  margin-bottom: 15px;
}

p {
  font-family: "Soleil Regular";
  font-size: 18px;
  line-height: 25px;
}
.mission-info{
  width: 80%;
}

h4 {
  font-family: "Soleil Book";
  color: black;
  font-size: 18px;
  margin-bottom: 5px;
}

.download{
  font-family: "Soleil Semibold";
  font-size: 18px;
  text-decoration: none;
  color: #0995E3;
  border: 2px solid #0995E3;
  background-color: white;
  padding: 11px 18px 8px 18px;
  border-radius: 7px;
  display: inline-block;
  transition: background-color 0.15s ease-in;
}

.fade{
  margin-left: 5px;
  color: #84CAF1;
  border: 2px solid #84CAF1;
}

/* LESSON PLANS */

#lessons {
  display: inline-block;
  margin: auto;
  vertical-align: middle;
}

#lessons h2{
  text-align: left;
  margin-left: 15%;
  font-family: "Soleil SemiBold";
  margin-bottom: 10px;
  font-size: 35px;
  color: #6D37FF
}

.collapsible {
  font-family: "Soleil SemiBold";
  background-color: #F3F3F3;
  cursor: pointer;
  padding: 6px 10px 5px 12px;
  text-align: center;
  width: 130.7px;
  border: none;
  text-align: left;
  outline: none;
  font-size: 18px;
  transition: background-color 0.3s ease-in;
  border-radius: 4px;
  display: block;
  margin-top: -20px;
  color: black;
}
.round{
  background-color: #F3F3F3;
  border-radius: 4px 4px 0px 0px;
  transition: 0.1s ease-in;
}
.collapsible:after {
  content: '\002B';
  color: black;
  display: inline-block;
  font-weight: bold;
  margin-left: 5px;
  margin-right: 5px;
}

.activeC:after {
  content: "\2212";
}

.contentClicked {
  color: blue;
  padding: 10 40px 40px 40px;
  transition: 0.1s ease-out;
}


.content-flex {
  display: flex;
  margin-top: 5px;
  margin-bottom: 0px;
}

.skill-grid {
  margin-bottom: 10px;
  background-color: #F3F3F3;
  display: inline-block;
  padding: 0px 10px;
  max-height: 0;
  overflow: hidden;
  transition: max-height 0.2s ease-out;
  border-radius: 0px 4px 4px 4px;
}

.skill-grid .grid{
  display: inline-flex;
  flex-wrap: wrap;
  gap: 8px;
}

.skill-grid p {
  font-weight: bold;
  font-size: .9rem;
  padding: 4px 8px 2px 8px;
  border-radius: 5px;
  color: white;
}

.skill-grid:after{
   content: ".";
   visibility: hidden;
   display: block;
   height: 10px;
   clear: both;
}

.literacy {
  background-color: #94CD3F;
}

.creative-arts {
  background-color: #FF57D0;
}

.abstraction {
  background-color: #8D57FF;
}

.mission {
  margin-bottom: 12px;
}

.worksheet {
  max-width: 150px;
  padding: 5px 40px 40px 30px;
  transition: 0.3s;
}

/**/
.mission{
  padding: 10px 0px 70px 0px;
  position: relative;
  background-color: inherit;
  display: inline-block;
  padding-left: 70px;
  padding-right: 25px;
  margin: 0 auto;
}

/* The circles on the timeline */
.mission::after {
  content: '';
  position: absolute;
  width: 15px;
  height: 15px;
  background-color: #E1E1E1;
  border: 4px solid #E1E1E1;
  top: 10px;
  border-radius: 50%;
  z-index: 1;
  left: 1px;
}

#mission-container{
  position: relative;
  margin: 0 auto;
  display: block;
  display: table;
  margin: 0 auto;
  width: 70%;
}

/* The actual timeline (the vertical ruler) */
#mission-container::after {
  content: '';
  position: absolute;
  width: 5px;
  background-color: #E1E1E1;
  border-radius: 100px;
  top: 10px;
  bottom: 0;
  left: 10px;
}

@media screen and (max-width: 1000px) {
  .fade{
    margin-left: 0px;
    margin-top: 5px;
  }
  .download{
    font-family: "Soleil Semibold";
    font-size: 16px;
  }
  #lessons h2{
    margin-left: 15%;
  }
  #mission-container{
    width: 80%;
    margin-left: 15%;
  }
  .skill-grid{
    width: 77%;
  }
  .worksheet {
    max-width: 150px;
    padding: 10px 40px 30px 30px;
    transition: 0.3s;
  }
  .activeC:before {
    padding: 0;
    margin: 0 12px 0 0;
  }
  .content-flex{
    flex-direction: column;
    margin-bottom: 40px;
  }
}

@media screen and (max-width: 700px) {
  .mission-info{
    width: 90%;
  }
  #lessons h2{
    margin-left: 10%;
  }
  #mission-container{
    width: 90%;
    margin-left: 10%;
  }
}

@media only screen and (max-width: 660px) {
  .skill-grid .grid{
    width: content;
  }
  h1{
    font-size: 3.8rem;
  }
  h2{
    font-size: 16px;
    width: 80%;
  }
  .mission-info{
    width: 100%;
  }
  #header{
    padding: 100px 0px;
  }
  #lessons{
    margin: 80px 25px 20px 25px;
  }
}

@media screen and (max-width: 450px) {
  h1{
    font-size: 3.2rem;
  }
  h2{
    width: 80%;
  }
  #lessons{
    margin: 40px 25px 20px 25px;
  }
  .mission-info{
    width: 100%;
  }
  #lessons h2{
    margin-left: 5%;
    font-size: 2rem;
  }
  #mission-container{
    width: 90%;
    margin-left: 5%;
  }
  #alon-planet {
    max-width: 300px;
  }
  .mission::after {
    content: '';
    position: absolute;
    width: 10px;
    height: 10px;
    background-color: #E1E1E1;
    border: 4px solid #E1E1E1;
    top: 10px;
    border-radius: 50%;
    z-index: 1;
    left: 3px;
  }
  .mission{
    padding: 10px 0px 70px 0px;
    position: relative;
    background-color: inherit;
    display: inline-block;
    padding-left: 50px;
    padding-right: 25px;
    margin: 0 auto;
  }
}

@media screen and (max-width: 370px) {
  #lessons{
    margin: 40px 15px 20px 15px;
  }

  h1{
    font-size: 3rem;
  }
  h2{
    width: 80%;
  }
  #alon-planet {
    max-width: 250px;
  }
}

@media only screen and (min-width: 700px) {
  .worksheet:hover {
    transform: rotate(-3deg) translateY(-5px);
    transition: 0.3s;
  }
  .download:hover{
    background-color: #0995E3;
    color: #fff;
  }

  .fade:hover{
    background-color: #84CAF1;
    color: #fff;
  }
}

